--- a/App.config
+++ b/App.config
@@ -9,6 +9,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
+  <connectionStrings>
+    <add name="ApplicationContext" connectionString="Data Source=DESKTOP-H5FE18K;Initial Catalog=Test;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
     <entityFramework>
         <providers>
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
